--- a/css/style.css
+++ b/css/style.css
@@ -1000,7 +1000,7 @@ ul.partnership-list a:hover {
      margin-bottom: 21px;
 }
 
-.guarantee-services-button {
+.warranty-services-button {
      position: relative;
      left: 6px;
 }
@@ -1010,13 +1010,29 @@ ul.partnership-list a:hover {
      left: 20px;
 }
 
-li.services-description-item {
+li.services-description-item:nth-child(1) {
      padding-left: 120px;
      padding-top: 4px;
      background-image: url("../img/delivery.svg");
      background-repeat: no-repeat;
      background-position: right 53px;
- }
+}
+
+li.services-description-item:nth-child(2) {
+     padding-left: 120px;
+     padding-top: 4px;
+     background-image: url("../img/warranty 1.svg");
+     background-repeat: no-repeat;
+     background-position: right 53px;
+}
+
+li.services-description-item:nth-child(3) {
+     padding-left: 120px;
+     padding-top: 4px;
+     background-image: url("../img/credit.svg");
+     background-repeat: no-repeat;
+     background-position: right 53px;
+}
 
 /* Flex footer */
 
