--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,8 @@
      --white-60: rgba(255, 255, 255, 0.6);
      --white-30: rgba(255, 255, 255, 0.3);
      --gold: #FFC600;
+     --gainsboro: #DCDCDC;
+     --gray92: #EBEBEB;
 }
 
 /* Global */
@@ -424,10 +426,13 @@ a.button:focus {
      opacity: 1;
 } 
 
-.sort-by-price a {
-     color: var(--basic-black);
-     opacity: 1;
+.sort-by-type,
+.sort-by-popularity,
+.up-dir {
+     opacity: 0.3;
 }
+
+
 
 /* Page catalog container */
 
@@ -447,8 +452,28 @@ div .page-catalog-subtitle {
      text-transform: uppercase;
 }
 
+.product-filter::after {
+     content: "";
+     position: absolute;
+     background-color: var(--gainsboro);
+     width: 468px;
+     height: 70px;
+     top: 0px;
+     left: -140px;
+}
+
+.filter-subtitle {
+     position: relative;
+     z-index: 1;
+     top: 9px;
+     left: 60px;
+}
+
 .product-filter {
-     background-color: var(--very-light-gray);
+     background-color: var(--basic-grey-light);
+     display: flex;
+     position: relative;
+     width: 327px;
 }
 
 .sorting-wrapper {
@@ -487,15 +512,29 @@ div .page-catalog-subtitle {
 }
 
 .page-button {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-between;
      font-family: "Gilroy", Tahoma, sans-serif;
+     font-style: normal;
      font-weight: 800;
      font-size: 16px;
      line-height: 20px;
-     letter-spacing: 1.6px;
+     letter-spacing: 0.1em;
      text-transform: uppercase;
-     background-color: var(--basic-grey-light);
 }
 
+.page-back {
+     padding-left: 30px;
+     margin-right: 217px;
+}
+
+.page-forward {
+     padding-right: 29px;
+     margin-left: 211px;
+}
+
+/*
 .page-button li:nth-child(2) {
      margin-left: 300px;
 }
@@ -503,6 +542,7 @@ div .page-catalog-subtitle {
 .page-button li:nth-child(4) {
      margin-right: auto;
 }
+*/
 
 .page-number {
      color: var(--basic-black);
@@ -687,7 +727,7 @@ div .page-catalog-subtitle {
      content: "";
      width: 14px;
      height: 14px;
-     background-image: url("../img/icon_user_yellow.svg");
+     background-image: url("../img/icon_user_special_yellow.svg");
      background-repeat: no-repeat;
      background-position: 0 0;
      top: 4px;
@@ -926,9 +966,21 @@ ul.partnership-list a:hover {
 
 /* Grid catalog page */
 
+/*
 .catalog-section {
+     background-color: var(--basic-grey-light);
+     width: 100%;
+}
+
+.catalog-section {
+     background-color: var(--basic-white);
+     background-size: 100%;
+}
+*/
+
+.catalog-background {
      display: grid;
-     grid-template-columns: 348px 1fr;
+     grid-template-columns: 328px 1fr;
      grid-template-rows: min-content 1fr min-content;
      align-content: start;
      width: 1160px;
@@ -955,33 +1007,58 @@ ul.partnership-list a:hover {
      grid-column-end: 3;
      grid-row-start: 2;
      grid-row-end: 3;
+     background-color: var(--basic-white);
+     margin-bottom: -7px;
 }
 
 .page-navigation {
      grid-column-start: 2;
      grid-column-end: 3;
      grid-row-start: 3;
-     grid-row-end: 4;     
+     grid-row-end: 4;    
+     background-color: var(--gray92);
+     width: 760px;
+     margin-left: auto;
+     padding: 9px 0;
+     margin-bottom: 78px; 
 }
 
 /* Grid title-conteiner */
 
 .title-conteiner {
-     display: grid; 
-     grid-template-rows: 1fr min-content;
+     display: grid;
+     grid-template-rows: 104px min-content;
      width: 1160px;
-     margin: 44px auto;
-     padding: 0;
+     margin: 0 auto 36px;
+     padding: 13px 0 0 120px;
 }
 
 /* Grid product-list */
 
+.product-list-wrapper .product-list {
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     align-items: flex-start;
+     list-style: none;
+     margin: 0;
+     padding-top: 71px;
+     padding-left: 72px;
+}
+
+.product-list {
+     padding-top: 47px;
+     padding-left: 72px;
+}
+
+/* 
 .product-list {
      list-style: none;
      display: grid;
      grid-template-columns: 1fr 1fr;
      grid-template-rows: 1fr 1fr;
 }
+*/
 
 .catalog-item h3 {
      font-size: 18px;
@@ -1011,6 +1088,11 @@ ul.partnership-list a:hover {
 .product-list-item {
      display: flex;
      position: relative;
+     margin-bottom: 48px;
+}
+
+.product-list-item:not(:nth-child(2n)) {
+     margin-right: 40px;
 }
 
 .layer-1 {
@@ -1023,14 +1105,39 @@ ul.partnership-list a:hover {
      display: flex;
      flex-direction: column;
      position: absolute;
-     top: 180px;
-     left: 80px;
+     top: 179px;
+     left: 72px;
+     z-index: 1;
+     opacity: 0;
+}
+
+.product-list li:first-child .layer-2 {
+     opacity: 1;
+}
+
+.layer-2:hover {
+     opacity: 1;
+     z-index: 1;
+}
+
+.description img:hover ~ .layer-2,
+.layer-2:hover {
+     display: flex;
+}
+
+.new-label::after {
+     content: url("../img/shape 2 1.svg");
+     position: absolute;
+     top: 29px;
+     right: 27px;
      z-index: 1;
 }
 
 .description {
      display: flex;
      flex-direction: row;
+     align-items: baseline;
+     margin-top: 30px;
 }
 
 .description a {
@@ -1040,6 +1147,26 @@ ul.partnership-list a:hover {
      font-size: 18px;
      line-height: 22px;
      letter-spacing: 0.05em;
+}
+
+.add-to-cart {
+     letter-spacing: 3.3px;
+     margin-bottom: 22px;
+}
+
+.add-to-cart::after {
+     position: absolute;
+     content: "";
+     background-color: var(--special-yellow-dark);
+     width: 95%;
+     height: 8px;
+     left: 5px;
+     top: 7px;
+     z-index: -1;
+}
+
+.add-to-comparison {
+     letter-spacing: 1.1px;
 }
 
 .catalog-category-item a {
@@ -1198,13 +1325,27 @@ li.services-description-item:nth-child(3) {
      padding: 0;
 }
 
+.footer-user-navigation li:first-child {
+     margin-left: -130px;
+     margin-right: -40px;
+}
+
+/*
 .footer-user-navigation li:nth-child(3) {
      margin-right: 0;
 }
+*/
 
+/*
 .footer-user-navigation li {
+     margin-right: -41px;
      padding-left: 24px;
 }
+
+.footer-user-navigation .login-link {
+     margin-left: -153px;
+}
+*/
 
 .footer-site-navigation {
      display: flex;
@@ -1242,19 +1383,13 @@ li.services-description-item:nth-child(3) {
 .breadcrumbs {
      display: flex;
      flex-direction: row;
-     justify-content: flex-start;
+     justify-content: left;
+     position: relative;
 }
 
 .breadcrumbs li {
      display: flex;
-     margin-right: 14px;
-}
-
-.breadcrumbs li:not(:last-child):after {
-     content: "";
-     width: 12px;
-     height: 12px;
-     background-image: url("../img/icon_arrow_nav.svg");
+     margin-right: 40px;
 }
 
 /* Flex sorting */
@@ -1263,23 +1398,29 @@ li.services-description-item:nth-child(3) {
      display: flex;
      flex-direction: row;
      width: 100%;
+     margin: 0;
+}
+
+.sorting-subtitle {
+     margin: 0 72px 0 0;
 }
 
 .sorting {
      display: flex;
      flex-direction: row;
      flex-grow: 1;
+     padding: 24px 0 25px 71px;
+     background-color: var(--basic-grey-light);
 }
 
-.sorting li {
+.sorting li:not(:last-child) {
      display: flex;
      flex-direction: row;
-     margin-right: 14px;
+     margin-right: 28px;
 }
 
 .down-dir {
      content: url("../img/icon_down_dir.svg");
-     margin-left: auto;
 }
 
 .up-dir {
@@ -1296,10 +1437,47 @@ li.services-description-item:nth-child(3) {
 .product-list a {
      display: flex;
      flex-direction: column-reverse;
+     flex-grow: 1;
 } 
 
-.page-button {
-     display: flex;
-     flex-direction: row;
-     justify-content: space-between;
+.inner-page-search {
+     margin-right: 369px;
 }
+
+.inner-user-navigation li:nth-child(2) {
+     opacity: 0.3;
+}
+
+.inner-user-navigation li:nth-child(3) {
+     margin-left: 87px;
+}
+
+.inner-main-navigation {
+     margin-bottom: 104px;
+}
+
+.inner-main-navigation-wrapper .container {
+     height: 186px;
+}
+
+.breadcrumb-item-1:after {
+     content: "";
+     position: absolute;
+     width: 12px;
+     height: 12px;
+     background-image: url("../img/icon_arrow_nav.svg");
+     top: 4px;
+     left: 68px;
+}
+
+.breadcrumb-item-2:after {
+     content: "";
+     position: absolute;
+     width: 12px;
+     height: 12px;
+     background-image: url("../img/icon_arrow_nav.svg");
+     top: 4px;
+     left: 216px;
+}
+
+
